<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.agent</groupId>
    <artifactId>corporate.pom</artifactId>

    <version>3.15-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>corporate.pom</name>
    <description>Meta information</description>

    <scm>
        <developerConnection>scm:git:ssh://git@git.dev.agent.ru/agent</developerConnection>
    </scm>

    <ciManagement>
        <system>TeamCity</system>
        <url>http://teamcity.dev.agent.ru/</url>
    </ciManagement>

    <properties>

        <!--resource files encoding-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--that's default version of spring-->
        <spring.version>3.1.2.RELEASE</spring.version>

        <!--Spring Security Version-->
        <spring.security.version>3.1.2.RELEASE</spring.security.version>

        <!--2.10 does not work-->
        <xerces.version>2.9.1</xerces.version>


        <aspectj.version>1.6.12</aspectj.version>

        <!--CXF version -->
        <cxf.version>2.3.9</cxf.version>

        <servlet-api.version>2.5</servlet-api.version>

        <!--Jetty version-->
        <jetty.version>8.1.8.v20121106</jetty.version>

        <!--Hibernate version-->
        <hibernate.version>3.6.9.Final</hibernate.version>

        <!--Hibernate Validator Version-->
        <hibernate.validator.version>4.1.0.Final</hibernate.validator.version>

        <!--Jackson mapper version-->
        <jackson.mapper.version>1.9.4</jackson.mapper.version>

        <ehcache.core.version>2.5.1</ehcache.core.version>
        <ehcache.web.version>2.0.4</ehcache.web.version>
        <ehcache.jms.replication.version>0.4</ehcache.jms.replication.version>

        <protostuff.version>1.0.4</protostuff.version>

        <commons.io.version>2.1</commons.io.version>
        <commons.lang.version>2.6</commons.lang.version>
        <httpclient.version>4.1.3</httpclient.version>

        <activemq.version>5.5.1</activemq.version>

        <jasperreports.version>4.1.1.1</jasperreports.version>
        <groovy.version>2.0.0</groovy.version>

        <slf4j.version>1.7.1</slf4j.version>
        <log4j.version>1.2.16</log4j.version>

        <testng.version>5.7</testng.version>
        <hamcrest.version>1.2.1</hamcrest.version>

        <!--testNG groups to be executed at test phase-->
        <test.groups>unit</test.groups>
        <test.excluded.groups>dbunit</test.excluded.groups>

        <!--testNG groups to be executed at integration-test phase-->
        <integration.groups>integration</integration.groups>

        <!--Need for Spring EL and Spring injection to work correctly-->
        <compiler.debug>true</compiler.debug>

        <!--Idea debugger starts very slow if false-->
        <compiler.optimize>true</compiler.optimize>
        <gelf4j.version>1.1</gelf4j.version>

        <!--Tomcat version for embedding-->
        <tomcat.version>6.0.29</tomcat.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>agent-releases</id>
            <name>Agent Releases</name>
            <url>http://repo.dev.agent.ru/nexus/content/repositories/agent-releases/</url>
        </repository>
        <snapshotRepository>
            <id>agent-snapshots</id>
            <name>Agent Snapshots</name>
            <url>http://repo.dev.agent.ru/nexus/content/repositories/agent-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <prerequisites>
        <maven>3.0.0</maven>
    </prerequisites>

    <build>
        <finalName>${project.artifactId}</finalName>
        <defaultGoal>package</defaultGoal>

        <plugins>
            <plugin>
                <artifactId>maven-idea-plugin</artifactId>
                <version>2.2</version>
                <!--Excluding Jetty runtime dir-->
                <configuration>
                    <exclude>target/work</exclude>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.5.1</version>
                </plugin>

                <plugin>
                    <inherited>true</inherited>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.0</version>
                    <configuration>
                        <source>7</source>
                        <target>7</target>
                        <optimize>${compiler.optimize}</optimize>
                        <debug>${compiler.debug}</debug>
                        <encoding>utf-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.12.4</version>
                    <configuration>
                        <groups>${test.groups}</groups>
                        <!--suppress MavenModelInspection -->
                        <excludedGroups>${test.excluded.groups}</excludedGroups>
                        <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                        <forkMode>once</forkMode>
                        <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=128m -XX:PermSize=32m</argLine>
                        <properties>
                            <property>
                                <name>suitename</name>
                                <value>UnitSuite-${project.artifactId}</value>
                            </property>
                        </properties>
                    </configuration>
                </plugin>

                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.6</version>
                </plugin>

                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.4</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                <addClasspath>true</addClasspath>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>

                <plugin>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.3.2</version>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>1.3.1</version>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>local</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <build.environment>local</build.environment>
            </properties>
        </profile>

        <profile>
            <id>dev</id>
            <properties>
                <build.environment>dev</build.environment>
            </properties>
        </profile>

        <profile>
            <id>exp</id>
            <properties>
                <build.environment>exp</build.environment>
            </properties>
        </profile>

        <profile>
            <id>stb</id>
            <properties>
                <build.environment>stb</build.environment>
            </properties>
        </profile>

        <profile>
            <id>prd</id>
            <properties>
                <build.environment>prd</build.environment>
                <skipTests>true</skipTests>
            </properties>
        </profile>

        <profile>
            <id>integration</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>integration-group-test</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <phase>integration-test</phase>
                                <configuration>
                                    <!--Integration tests should never run in parallel-->
                                    <forkMode>once</forkMode>
                                    <groups>${integration.groups}</groups>
                                    <excludedGroups>${test.groups}</excludedGroups>
                                    <properties>
                                        <property>
                                            <name>suitename</name>
                                            <value>IntegrationSuite-${project.artifactId}</value>
                                        </property>
                                    </properties>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <test.groups>dontrunme</test.groups>
                <test.excluded.groups>unit</test.excluded.groups>
            </properties>
        </profile>
    </profiles>
</project>
